test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/target-preconditions/resources.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: target-1
  labels:
    foo: bar
data:
  content: abc
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: target-2
  labels:
    foo: not_bar
data:
  content: abc
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: target-3
data:
  content: abc
