test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/target-preconditions/trigger.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: trigger
data:
  content: trigger
