test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/target-preconditions/resources-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: target-1
data:
  content: trigger
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: target-2
data:
  content: abc
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: target-3
data:
  content: abc
