test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/target-preconditions/03-trigger.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: trigger
spec:
  timeouts: {}
  try:
  - apply:
      file: trigger.yaml
